# datamind_llm_factory

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: ADR-001-llm-enrichment.md  ADR-002-nl-to-sql.md
monitoring/: prometheus.yml
scripts/: generate_sample_data.py
src/: __init__.py  config.py  logger.py
src/api/: main.py  middleware.py  schemas.py
src/api/routes/: __init__.py  health.py  ingest.py  insights.py  query.py
src/db/: __init__.py  models.py  session.py
src/etl/: cleaner.py  transformer.py  validator.py
src/ingestion/: factory.py  schema_detector.py
src/ingestion/connectors/: __init__.py  api_connector.py  base.py  csv_connector.py  sql_connector.py
src/llm/: client.py  enricher.py  prompts.py
src/monitoring/: metrics.py
src/query/: anomaly.py  nl_to_sql.py  report.py
src/workers/: celery_app.py  tasks.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_cleaner.py  test_schema_detector.py  test_transformer.py  test_validator.py
